// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentPageImage.js > creates the expected markup for the given config settings 1`] = `
"<figure class=\\"c-someContainer-img c-contentImage c-contentImage--hasBackdrop\\">
        <div class=\\"c-contentImage-backdrop c-contentImage-default\\">
          <picture>
            <source style=\\"--img-width: 200px;\\" media=\\"(max-width: 600px)\\" srcset=\\"some/path/to/mobile/image\\">
            <img src=\\"some/path/to/image\\" style=\\"--img-width: 200px;\\" alt=\\"foo bar\\">
          </picture>
        </div>
        <figcaption class=\\"c-contentImage-caption\\"><span>some caption text <a href=\\"fakeurl/path\\">with a link</a></span></figcaption>
      </figure>"
`;

exports[`contentPageImage.js > creates the expected markup for the given config settings 2`] = `
"<figure class=\\"c-contentPage-img c-contentImage c-contentImage--fullWidth\\">
        <div class=\\"c-contentImage-backdrop c-contentImage-default\\">
          <picture>
            
            <img src=\\"some/path/to/image\\"  alt=\\"\\">
          </picture>
        </div>
        
      </figure>"
`;
